--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,13 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 	<dependencies>
+		<dependency>  
+		    <groupId>cn.com.sansec.key</groupId>  
+		    <artifactId>sansec</artifactId>  
+		    <version>2.0</version>  
+		    <scope>system</scope>  
+		    <systemPath>${project.basedir}/libs/sansec_sdkey2.1.1.jar</systemPath>  
+		</dependency>  
 		<dependency>
 			<groupId>org.json</groupId>
 			<artifactId>json</artifactId>
