--- a/pom.xml
+++ b/pom.xml
@@ -64,7 +64,11 @@
             <artifactId>bcprov-jdk15on</artifactId>
             <version>1.56</version>
         </dependency>
-
+		<dependency>  
+		    <groupId>com.google.protobuf</groupId>  
+		    <artifactId>protobuf-java</artifactId>  
+		    <version>2.5.0</version>  
+		</dependency>
 	</dependencies>
     <profiles>
         <profile>
