--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.peersafe</groupId>
 	<artifactId>chainsql</artifactId>
-	<version>1.3.2</version>
+	<version>1.4.1</version>
 	<packaging>jar</packaging>
 	<name>ChainSQL JAVA API</name>
 	<url>https://github.com/peersafe/java-chainsql</url>
@@ -36,13 +36,15 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 	<dependencies>
+	<!-- 
 		<dependency>  
 		    <groupId>cn.com.sansec.key</groupId>  
 		    <artifactId>sansec</artifactId>  
 		    <version>2.0</version>  
 		    <scope>system</scope>  
 		    <systemPath>${project.basedir}/libs/sansec_sdkey2.1.1.jar</systemPath>  
-		</dependency>  
+		</dependency>
+	 -->  
 		<dependency>
 			<groupId>org.json</groupId>
 			<artifactId>json</artifactId>
@@ -130,11 +132,11 @@
             </build>
             <distributionManagement>
                 <snapshotRepository>
-                    <id>snapshots</id>
+                    <id>oss</id>
                     <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
                 </snapshotRepository>
                 <repository>
-                    <id>releases</id>
+                    <id>oss</id>
                     <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
                 </repository>
             </distributionManagement>
