add abi_chainsql project

--- a/pom.xml
+++ b/pom.xml
@@ -11,5 +11,6 @@
   <modules>
     <module>chainsql</module>
     <module>codegen</module>
+    <module>abi_chainsql</module>
   </modules>
 </project>
