codegen fix bug when return multiple value

--- a/codegen/pom.xml
+++ b/codegen/pom.xml
@@ -37,6 +37,11 @@
 		    <version>1.7.25</version>
 		</dependency>
 		<dependency>
+			<groupId>org.slf4j</groupId>
+      		<artifactId>slf4j-nop</artifactId>
+     		<version>1.7.2</version>
+	 	</dependency>
+		<dependency>
 		    <groupId>io.reactivex</groupId>
 		    <artifactId>rxjava</artifactId>
 		    <version>1.2.4</version>
