--- a/chainsql/pom.xml
+++ b/chainsql/pom.xml
@@ -54,7 +54,7 @@
 		<dependency>
 			<groupId>org.java-websocket</groupId>
 			<artifactId>Java-WebSocket</artifactId>
-			<version>1.3.8</version>
+			<version>1.5.0</version>
 		</dependency>
 		<dependency>
 			<groupId>net.i2p</groupId>
@@ -82,6 +82,16 @@
 		    <artifactId>rxjava</artifactId>
 		    <version>1.2.4</version>
 		</dependency> -->
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+			<version>1.7.5</version>
+		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-simple</artifactId>
+			<version>1.6.4</version>
+		</dependency>
 		<dependency>
 		    <groupId>org.web3j</groupId>
 		    <artifactId>tuples</artifactId>
