--- a/chainsql/pom.xml
+++ b/chainsql/pom.xml
@@ -35,6 +35,8 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<web3j.version>3.4.0</web3j.version>
+		<maven.compiler.source>1.8</maven.compiler.source>
+		<maven.compiler.target>1.8</maven.compiler.target>
 	</properties>
 	<dependencies>
 	<!-- 
@@ -96,6 +98,12 @@
 		    <groupId>org.web3j</groupId>
 		    <artifactId>tuples</artifactId>
 		    <version>${web3j.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.12</version>
 		</dependency>
 				
 	</dependencies>
