1 implement createSchema and  modifySchema 2 add some unity test code

--- a/chainsql/pom.xml
+++ b/chainsql/pom.xml
@@ -97,7 +97,13 @@
 		    <artifactId>tuples</artifactId>
 		    <version>${web3j.version}</version>
 		</dependency>
-				
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>RELEASE</version>
+			<scope>test</scope>
+		</dependency>
+
 	</dependencies>
     <profiles>
         <profile>
