fix the problem of jdk-1.8 version compilation

--- a/chainsql/pom.xml
+++ b/chainsql/pom.xml
@@ -176,6 +176,18 @@
                 </repository>
             </distributionManagement>
         </profile>
+		<profile>
+			<id>jdk-1.8</id>
+			<activation>
+				<activeByDefault>true</activeByDefault>
+				<jdk>1.8</jdk>
+			</activation>
+			<properties>
+				<maven.compiler.source>1.8</maven.compiler.source>
+				<maven.compiler.target>1.8</maven.compiler.target>
+				<maven.compiler.compilerVersion>1.8</maven.compiler.compilerVersion>
+			</properties>
+		</profile>
     </profiles>
 	<!-- 
 	<build>
