--- a/chainsql/pom.xml
+++ b/chainsql/pom.xml
@@ -67,12 +67,17 @@
         <dependency>    
             <groupId>org.bouncycastle</groupId>
             <artifactId>bcprov-jdk15on</artifactId>
-            <version>1.65</version>
+            <version>1.70</version>
+        </dependency>
+		<dependency>    
+            <groupId>org.bouncycastle</groupId>
+            <artifactId>bcpkix-jdk15on</artifactId>
+            <version>1.70</version>
         </dependency>
 		<dependency>  
 		    <groupId>com.google.protobuf</groupId>  
 		    <artifactId>protobuf-java</artifactId>  
-		    <version>2.5.0</version>  
+		    <version>4.0.0-rc-2</version>  
 		</dependency>
   		<dependency>
 		    <groupId>com.peersafe</groupId>
