--- a/chainsql/pom.xml
+++ b/chainsql/pom.xml
@@ -47,7 +47,19 @@
 		    <scope>system</scope>  
 		    <systemPath>${project.basedir}/libs/sansec_sdkey2.1.1.jar</systemPath>  
 		</dependency>
-	 -->  
+	 -->
+	 	<dependency>
+			<groupId>io.netty.tcnative</groupId>
+			<artifactId>netty-tcnative</artifactId>
+			<version>2.0.39</version>
+			<scope>system</scope>
+			<systemPath>${project.basedir}/libs/netty-tcnative-openssl-static-2.0.39.Final.jar</systemPath>
+		</dependency>
+		<dependency>
+			<groupId>io.netty</groupId>
+			<artifactId>netty-all</artifactId>
+			<version>4.1.53.Final</version>
+		</dependency>
 		<dependency>
 			<groupId>org.json</groupId>
 			<artifactId>json</artifactId>
@@ -115,6 +127,15 @@
         <profile>
             <id>release</id>
             <build>
+				<resources>
+					<resource>
+						<directory>libs</directory>
+      					<targetPath>./BOOT-INF/libs/</targetPath>
+      					<includes>
+        					<include>**/*.jar</include>
+      					</includes>
+					</resource>
+				</resources>
                 <plugins>
                       <plugin>
 				        <groupId>org.apache.maven.plugins</groupId>
