--- a/chainsql/pom.xml
+++ b/chainsql/pom.xml
@@ -51,14 +51,15 @@
 	 	<dependency>
 			<groupId>io.netty.tcnative</groupId>
 			<artifactId>netty-tcnative</artifactId>
-			<version>2.0.39</version>
+			<version>2.0.44</version>
 			<scope>system</scope>
-			<systemPath>${project.basedir}/libs/netty-tcnative-openssl-static-2.0.39.Final.jar</systemPath>
+			<!-- <systemPath>${project.basedir}/libs/netty-tcnative-openssl-static-2.0.39.Final.jar</systemPath> -->
+			<systemPath>${project.basedir}/libs/netty-tcnative-openssl-static-2.0.44.Final.jar</systemPath>
 		</dependency>
 		<dependency>
 			<groupId>io.netty</groupId>
 			<artifactId>netty-all</artifactId>
-			<version>4.1.53.Final</version>
+			<version>4.1.70.Final</version>
 		</dependency>
 		<dependency>
 			<groupId>org.json</groupId>
@@ -215,7 +216,7 @@
 		</profile>
     </profiles>
 	
-	<!-- <build>
+	<build>
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -246,6 +247,6 @@
 			</plugin>
 
 		</plugins>
-	</build> -->
+	</build>
 	
 </project>
