--- a/abi_chainsql/pom.xml
+++ b/abi_chainsql/pom.xml
@@ -4,7 +4,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.peersafe</groupId>
     <artifactId>abi_chainsql</artifactId>
-    <version>3.0.0</version>
+    <version>3.0.2</version>
     <name>abi_chainsql</name>
     <url>https://github.com/ChainSQL/java-chainsql-api/tree/feature/contract</url>
     <description>abi_chainsql is a toolkit for ChainSQL JAVA API</description>
@@ -77,6 +77,13 @@
             <id>release</id>
             <build>
                 <plugins>
+	                <plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-surefire-plugin</artifactId>
+						<configuration>
+							<skip>true</skip>
+						</configuration>
+					</plugin>
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-compiler-plugin</artifactId>
