--- a/chainsql/pom.xml
+++ b/chainsql/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.peersafe</groupId>
 	<artifactId>chainsql</artifactId>
-	<version>3.0.1</version>
+	<version>3.0.3</version>
 	<packaging>jar</packaging>
 	<name>ChainSQL JAVA API</name>
 	<url>https://github.com/chainsql/java-chainsql-api</url>
@@ -94,7 +94,7 @@
   		<dependency>
 		    <groupId>com.peersafe</groupId>
 		    <artifactId>abi_chainsql</artifactId>
-		    <version>3.0.0</version>
+		    <version>3.0.2</version>
 		</dependency><!-- 
 		<dependency>
 		    <groupId>io.reactivex</groupId>
@@ -203,9 +203,11 @@
 	<build>
 		<plugins>
 			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
 				<configuration>
 					<skip>true</skip>
+					<javadoc.skip>true</javadoc.skip>
 				</configuration>
 			</plugin>
 			
